add auth and user modules

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,27 @@
 PORT=5000
 DB_URL=mongodb+srv://example_db_username:example_db_password@cluster0.x32av.mongodb.net/example_db_name?retryWrites=true&w=majority&appName=Cluster0
 NODE_ENV=development
+
+# BCRYPT
+BCRYPT_SALT_ROUND=salt_round_number
+
+# JWT
+JWT_ACCESS_SECRET=YOUR_JWT_ACCESS_SECRET
+JWT_ACCESS_EXPIRES=MENTION_YOUR_JWT_ACCESS_EXPIRES
+JWT_REFRESH_SECRET=YOUR_JWT_REFRESH_SECRET
+JWT_REFRESH_EXPIRES=MENTION_YOUR_JWT_REFRESH_EXPIRES
+
+# SUPER ADMIN
+SUPER_ADMIN_EMAIL=SUPER_ADMIN_EMAIL
+SUPER_ADMIN_PASSWORD=SUPER_ADMIN_PASSWORD
+
+# GOOGLE
+GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
+GOOGLE_CALLBACK_URL=GOOGLE_CALLBACK_URL
+
+# EXPRESS SESSION
+EXPRESS_SESSION_SECRET=EXPRESS_SESSION_SECRET
+
+# FRONTEND URL
+FRONTEND_URL=YOUR_FRONTEND_URL
