--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Parcel Delivery System",
   "main": "index.js",
   "scripts": {
+    "start": "node ./dist/server/js",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "build": "tsc",
     "lint": "npx eslint ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
